# old-armci-mpi

./: .travis.yml  Makefile.am  configure.ac
m4/: aclocal_cc.m4
src/: armci.h  armci_internals.h  armci_profiler.c  armci_profiler.h  armcix.h  buffer.c  debug.h  gmr-extras.c  gmr.c  gmr.h  groups.c  init_finalize.c  internals.c  onesided.c  onesided_nb.c  profile.c  profile.h  profile_f.c  rmw.c  strided.c  strided_nb.c  util.c  vector.c  vector_nb.c
src/common/: init_finalize.c  internals.c  malloc.c  message.c  mutex_hdl_queue.c  mutex_hdl_spin.c  strided_nb.c  util.c
src/mpi2/: buffer.c  gmr.c  rmw.c  strided.c  strided_nb.c  vector_nb.c
src/mpi3/: buffer.c  gmr-extras.c  gmr.c  rmw.c  strided.c  vector.c
tests/: test_accs.c
travis/: build-run.sh  install-autotools.sh  install-mpi.sh
